j--/tests/pass/LShift.java
package pass;

public class LShift {

	public int shift(int a, int b) {
		return a<<b;
	}

}
