j--/tests/fail/LShift.java
package fail;

public class LShift {

	public static void main(String[] args) {
		System.out.println("a"<<"b");

	}

}
